# c-multi-proj-tpl

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/hello_world/: CMakeLists.txt  main.c
